; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_rpc_generic.c___rpc_dtbsize.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/rpc/extr_rpc_generic.c___rpc_dtbsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit = type { i64 }

@__rpc_dtbsize.tbsize = internal global i32 0, align 4
@RLIMIT_NOFILE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__rpc_dtbsize() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.rlimit, align 8
  %3 = load i32, i32* @__rpc_dtbsize.tbsize, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @__rpc_dtbsize.tbsize, align 4
  store i32 %6, i32* %1, align 4
  br label %16

7:                                                ; preds = %0
  %8 = load i32, i32* @RLIMIT_NOFILE, align 4
  %9 = call i64 @getrlimit(i32 %8, %struct.rlimit* %2)
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = getelementptr inbounds %struct.rlimit, %struct.rlimit* %2, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* @__rpc_dtbsize.tbsize, align 4
  store i32 %14, i32* %1, align 4
  br label %16

15:                                               ; preds = %7
  store i32 32, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %11, %5
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i64 @getrlimit(i32, %struct.rlimit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
